@@ -1,6 +1,12 @@
 0.3.4 SVN/Unreleased
 ====================
  
+  - Completing work from r67547 (e.g. Fixed occurrences of `email-notification-recipients` to the singular form
+    as used in most places.).  When initializing collective.buildbot.project.Project we want to actually look
+    for the singular version.  Additionally, we want our comment regarding notifications in master.cfg_tmpl to
+    suggest the correct value to be set.
+    [andrewb]
+ 
   - Make timeout configurable, globally and independently for build
     and test steps.
     [sidnei]
